[gd_scene load_steps=8 format=3 uid="uid://drq1eh7oas4aw"]

[ext_resource type="Script" path="res://scenes/character_select.gd" id="1_fdq8v"]
[ext_resource type="Texture2D" uid="uid://ybk4tdmulta1" path="res://assets/images/characterselect.png" id="1_nl8wv"]
[ext_resource type="Texture2D" uid="uid://cs6swtbbspvvl" path="res://assets/images/adventure/character_portraits.png" id="2_2tspa"]
[ext_resource type="AudioStream" uid="uid://7lpfe4m6j6wg" path="res://assets/music/character_select.ogg" id="3_fikw2"]
[ext_resource type="Texture2D" uid="uid://bhgkagso864du" path="res://assets/images/adventure/selector.png" id="3_k0ysg"]
[ext_resource type="AudioStream" uid="uid://c8qhybcqtsg2c" path="res://assets/sfx/yoshi.wav" id="6_kbjas"]
[ext_resource type="AudioStream" uid="uid://l7camcx76m2e" path="res://assets/sfx/select.wav" id="7_mahjc"]

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_fdq8v")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 256.0
offset_bottom = 240.0
texture = ExtResource("1_nl8wv")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 256.0
offset_bottom = 240.0

[node name="Selector" type="Node2D" parent="CenterContainer"]
position = Vector2(64, 98)

[node name="Sprite2D" type="Sprite2D" parent="CenterContainer/Selector"]
texture = ExtResource("3_k0ysg")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="Row1Container" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Row1" type="GridContainer" parent="CenterContainer/VBoxContainer/Row1Container"]
layout_mode = 2
theme_override_constants/h_separation = 48
theme_override_constants/v_separation = 64
columns = 4

[node name="Jelly" type="Control" parent="CenterContainer/VBoxContainer/Row1Container/Row1"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="CenterContainer/VBoxContainer/Row1Container/Row1/Jelly"]
scale = Vector2(2, 2)
texture = ExtResource("2_2tspa")
vframes = 7

[node name="Panda" type="Control" parent="CenterContainer/VBoxContainer/Row1Container/Row1"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="CenterContainer/VBoxContainer/Row1Container/Row1/Panda"]
scale = Vector2(2, 2)
texture = ExtResource("2_2tspa")
vframes = 7
frame = 1

[node name="Hummer" type="Control" parent="CenterContainer/VBoxContainer/Row1Container/Row1"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="CenterContainer/VBoxContainer/Row1Container/Row1/Hummer"]
scale = Vector2(2, 2)
texture = ExtResource("2_2tspa")
vframes = 7
frame = 2

[node name="Row2" type="GridContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 48
theme_override_constants/v_separation = 64
columns = 4

[node name="Rings1" type="Control" parent="CenterContainer/VBoxContainer/Row2"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="CenterContainer/VBoxContainer/Row2/Rings1"]
scale = Vector2(2, 2)
texture = ExtResource("2_2tspa")
vframes = 7
frame = 3

[node name="Rings2" type="Control" parent="CenterContainer/VBoxContainer/Row2"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="CenterContainer/VBoxContainer/Row2/Rings2"]
scale = Vector2(2, 2)
texture = ExtResource("2_2tspa")
vframes = 7
frame = 4

[node name="Rings3" type="Control" parent="CenterContainer/VBoxContainer/Row2"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="CenterContainer/VBoxContainer/Row2/Rings3"]
scale = Vector2(2, 2)
texture = ExtResource("2_2tspa")
vframes = 7
frame = 5

[node name="Rings4" type="Control" parent="CenterContainer/VBoxContainer/Row2"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="CenterContainer/VBoxContainer/Row2/Rings4"]
scale = Vector2(2, 2)
texture = ExtResource("2_2tspa")
vframes = 7
frame = 6

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_fikw2")
autoplay = true
bus = &"Music"

[node name="Move" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_kbjas")

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_mahjc")
